# LiDAR-Point-Cloud-Server

./: .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/2023-10-18-122255_create_files/: up.sql
migrations/2023-10-18-123402_create_parts/: down.sql  up.sql
migrations/2023-10-19-062621_add_constraint_on_files/: down.sql  up.sql
migrations/2023-10-19-062924_add_constraint_on_parts/: down.sql  up.sql
migrations/2023-10-19-064719_remove_constraint/: down.sql  up.sql
migrations/2023-10-19-065841_rename_tables/: down.sql  up.sql
migrations/2023-10-19-092604_create_files_table/: up.sql
migrations/2023-10-26-133230_file_table/: up.sql
migrations/2023-10-27-053141_rename_tables/: down.sql  up.sql
src/: database.rs  graphql.rs  handlers.rs  main.rs  models.rs  schema.rs  services.rs
src/database/: models.rs  schema.rs
src/graphql/: context.rs  models.rs  mutations.rs  queries.rs  schema.rs
src/graphql/models/: las.rs  shared.rs
src/graphql/queries/: file.rs  las.rs
src/models/: las.rs  mod.rs
src/queries/: las.rs
src/query/: las.rs
src/services/: extractors.rs
