[package]
name = "actix_juniper_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
juniper = "0.15.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
las = { version = "0.8.1", features = ["laz"] }
