[package]
name = "point_cloud_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
juniper = "0.15.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
las = { version = "0.8.1", features = ["laz"] }
dotenvy = "0.15.7"
rand = "0.8.5"
uuid = { version = "1.5.0", features = [
  "v4",
  "serde",
  "fast-rng",
  "macro-diagnostics",
] }
diesel = { version = "2.1.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
